# compiler

./: .gitignore  .ocamlformat  README.md  compiler.opam  dune-project  run.sh
.github/workflows/: backend.yml  ci.yml
lexer/: dune-project  processing.ml
lexer/lib/: dune  rule_token.mll  token.ml
lexer/test/: dune  test_lexer.ml
lib/: app.ml  app.mli  asm.ml  backend.ml  backend.mli  dune  generator.ml  generator.mli  inferencer.ml  inferencer.mli  lexer.ml  lexer.mli  parser.ml  parser.mli  stdlib.s  token.ml  types.ml
lib2/: ast_types.ml  dune  lexer.ml  parser.ml
parser/: dune-project  parse_condition.ml
parser/ast/: ast.ml  dune  parse.ml
parser/lexer/: dune  parse.ml  processing.ml  rule_token.mll  token.ml  token.mll
parser/parser/: dune  expression.ml  parse.ml  parse_condition.ml  parse_expression.ml  parse_to_program.ml  types.ml
parser/test/: dune  test_ast.ml  test_condition.ml  test_functions.ml  test_lexer.ml  test_parse_expression.ml  (+2 more)
presentation/: slides.tex
test/: dune  generator.ml  inferencer.ml  lexer.ml  parser.ml  test_comparison.ml  test_condition.ml  test_functions.ml  test_ite.ml  test_lexer.ml  test_parse_expression.ml  test_parse_to_program.ml
test/ast/: dune  tests.ml
test/backend/: assignment.ml  dune  factorial.lang  factorial.ml  fibonacci.lang  generator.ml  simple.ml  test.sh  test1.lang  test2.lang  xor.lang
test/frontend/: algorithms.ml  call.ml  condition.ml  dune  ite.ml  lexer.ml  parse_expression.ml  parse_to_program.ml  parser.ml  strings.ml
test/inferencer/: dune  type_checker.ml
test_for_ci/: dune-project
(+3 files in other folders)
