(test
 (name test_lexer)
 (libraries alcotest lexer))

(test
 (name test_parse_to_program)
 (libraries alcotest parser lexer))

(test
 (name test_functions)
 (libraries alcotest parser lexer))
 
(test
 (name test_condition)
 (libraries alcotest parser lexer))

(test
 (name test_parse_expression)
 (libraries alcotest parser lexer))
