(test
 (name test_lexer)
 (libraries alcotest compiler))

(test
 (name test_parse_to_program)
 (libraries alcotest compiler))

(test
 (name test_functions)
 (libraries alcotest compiler))
 
(test
 (name test_comparison)
 (libraries alcotest compiler))

(test
 (name test_parse_expression)
 (libraries alcotest compiler))

