(test
 (name lexer)
 (libraries alcotest compiler))

(test
 (name parse_to_program)
 (libraries alcotest compiler))

(test
 (name algorithms)
 (libraries alcotest compiler))

(test
 (name condition)
 (libraries alcotest compiler))

(test
 (name parse_expression)
 (libraries alcotest compiler))

(test
 (name ite)
 (libraries alcotest compiler))

(test
 (name call)
 (libraries alcotest compiler))
